--- a/content/method/applied.tex
+++ b/content/method/applied.tex
@@ -1,6 +1,44 @@
-\section{This generic framework applied to \ac{bus} imaging}\label{sec:method:dterm:feat}
+\section{\ac{bus} images segmentation using optimization}\label{sec:methodApp}
+This section defines the problem of delineating structures in \ac{bus} images as an optimization problem that can be solved applying the framework presented in \cref{sec:method}.
+In general terms, the image is divided in a discrete set $\mathcal{S}$, and each of these elements is associated with a label $l \in \{\text{lesion}, \overline{\text{lesion}}\}$ by simultaneously optimizing the data and pairwise terms. 
 
-In this section, the generic framework presented in the previous section is applied to \ac{bus} imaging. We need to define our problem properly. We recall that the aim in segmentation is to affect to a discrete set of elements $\mathcal{S}$, a label $l$ from a labelling set $\mathcal{L}$. In our case, our labelling set $\mathcal{L} = \{ \text{chest wall}, \text{lungs}, \dots, \text{lesion} \}$ (see Fig\,\ref{fig:methodTerms:problem} for the entire set of labels) and the set $\mathcal{S}$ is chosen to be a super-pixels representation of the image~\cite{achanta2012slic}. In our case, $\mathcal{S}$ is the result from an over-segmentation of the image using Quick-shift super-pixel. Figure~\ref{fig:methodTerms:problem} illustrates one such representation $\mathcal{S}$, applied to a \ac{bus} image example. The super-pixels are coloured according to the image's \ac{gt}. Bear in mind that given an unseen \ac{bus} image, the ultimate goal is to represent the image as a set of super-pixels and infer the appropriated labelling for each of them.
+Figure~\ref{fig:methodterms} uses the problem of delineating the tissues present in a \ac{bus} images ($\mathcal{L} = \{ \text{chest wall}, \text{lungs}, \dots, \text{lesion} \}$) to illustrate the terms described in \cref{sec:method}. 
+
+{\color{red}
+In general, $\mathcal{S}$ can be any discrete set representing the image (i.e.\, pixels, overlapping or non overlapping windows, super-pixels, etc.). 
+Figure~\ref{fig:methodTerms:problem} illustrates one such representation $\mathcal{S}$, applied to a \ac{bus} image example using super-pixels. The super-pixels are coloured according to the image's \ac{gt}.
+
+Figure~\ref{fig:methodTerms:data} illustrates the data cost associated to some arbitrary labelling configurations to clarify the desired effect (or behaviour) of this data term (Fig.\,\ref{fig:methodTerms:problem} shows the \ac{gt} of each site $s$).
+}
+
+\begin{figure}
+    \centering
+    \begin{subfigure}[b]{0.19\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{problem}
+        %\caption{{\small Problem definition}}    
+        \label{fig:methodTerms:problem}
+    \end{subfigure}
+    \hfill
+    \begin{subfigure}[b]{0.39\textwidth}  
+        \centering 
+        \includegraphics[width=\textwidth]{data}
+        %\caption[]% {{\small Data term}}    
+        \label{fig:methodTerms:data}
+    \end{subfigure}
+    \hfill
+    \begin{subfigure}[b]{0.39\textwidth}   
+        \centering 
+        \includegraphics[width=\textwidth]{smooth} 
+        %\caption[]% {{\small Pairwise term }}
+        \label{fig:methodTerms:boundary}
+    \end{subfigure}
+    \caption {\small Methodology: (a) Problem definition, (b) Data term, (c) Pairwise term.} 
+    \label{fig:methodterms}
+\end{figure}
+
+
+ We recall that the aim in segmentation is to affect to a discrete set of elements $\mathcal{S}$, a label $l$ from a labelling set $\mathcal{L}$. In our case, our labelling set $\mathcal{L} = \{ \text{chest wall}, \text{lungs}, \dots, \text{lesion} \}$ (see Fig\,\ref{fig:methodTerms:problem} for the entire set of labels) and the set $\mathcal{S}$ is chosen to be a super-pixels representation of the image~\cite{achanta2012slic}. In our case, $\mathcal{S}$ is the result from an over-segmentation of the image using Quick-shift super-pixel. Figure~\ref{fig:methodTerms:problem} illustrates one such representation $\mathcal{S}$, applied to a \ac{bus} image example. The super-pixels are coloured according to the image's \ac{gt}. Bear in mind that given an unseen \ac{bus} image, the ultimate goal is to represent the image as a set of super-pixels and infer the appropriated labelling for each of them.
 
 \begin{figure}
   \includegraphics[width=0.9\textwidth]{lexiconReworked}
