--- a/content/method/method.tex
+++ b/content/method/method.tex
@@ -25,8 +25,6 @@ In order to formulate the segmentation like a metric labelling problem, the imag
 Let $\mathcal{W}$ be all the possible labelling configurations of the set $\mathcal{S}$, given $\mathcal{L}$.
 Let $U(\cdot)$ be a cost function encoding the goodness of the labelling configuration $\omega \in \mathcal{W}$ based on the appearance of the elements in $\mathcal{S}$, their inner relation and some designing constraints.
 Then, the desired segmentation $\hat{\omega}$ corresponds to the labelling configuration that minimizes this cost function, as described in Eq.\,\eqref{eq:costMin}.
-It is worth to mention here that not all the minimization strategies are applicable or adequate to find $\hat{\omega}$.
-The convenience of a particular minimization strategy is determined by the nature of $U(\cdot)$ and $\mathcal{W}$. % (see Sect.\,\ref{sec:method:min}).
 
 \begin{equation}
 \hat{\omega} = \arg \min_{\substack{\omega}} \,U(\omega)
@@ -48,7 +46,7 @@ Both terms are shaped by $\mathcal{S}$ and evaluated in the labelling space $\ma
 {\color{red}In our quest to optimize the cost function $U(\cdot)$, it is required to define a representation for the set $\mathcal{S}$, a data term $D(\cdot)$, a pairwise term $V(\cdot)$, and a proper minimization methodology.}
 
 \paragraph{The set $\mathcal{S}$}
-representing the image can be, in general,any discrete set representing the image (i.e.\, pixels, overlapping or non overlapping windows, super-pixels, etc.). 
+that represents the image can be, in general, any discrete set representing the image (i.e.\, pixels, overlapping or non overlapping windows, super-pixels, etc.). 
 
 \paragraph{The data term} \label{sec:method:dataTerm}
 , given a label configuration $\omega \in \mathcal{W}$, penalizes the labelling of a particular image element or site ($\omega_s = l$) based on the data associated to $s$.
@@ -77,32 +75,15 @@ V_{s,r}(\omega_s,\omega_r) =
 \label{eq:smoothing}
 \end{equation}
 
-Figure~\ref{fig:methodTerms:boundary} offers a visual interpretation of this cost.
-The more fragmented is the segmentation $\omega$, the higher the overall pairwise term; since every boundary brings a penalization $\beta$ to the total cost $U(\omega)$.
-In this manner the regularization term can be seen as a post-processing or denoising stage since that some sites will flip their labelling if the cost of fragmenting the regions is larger than the cost of adopting their neighbour's label.
 
 % Review %contribute have different or variable costs (see \cref{fig:methodTerms:boundary}) are also possible by taking into account not only relations in $\mathcal{S}$ of but also image information (see \cref{fig:method}). 
 %Further details can be found in \cref{sec:smoothing}.
 
-\subsection{Searching the best labelling configuration} \label{sec:method:min}
-Once defined $U(\omega)$ so that the cost for a particular labelling configuration $\omega$ can be computed, the problem of finding $\hat{\omega}$ corresponding to the global minimum of the space $\mathcal{W}$ of all possible labelling configurations needs to be faced. 
-%
-%%This problem falls into the category of \textbf{NP-hard} problems. 
-%% Good % The dimension of the solution space can be expressed as $||\mathcal{W}|| = ||\mathcal{L}||^{||\mathcal{S}||}$. 
-%% Good % This means that in order to perform an exhaustive search for a toy example of $20$ sites and two possible labels, the cost function needs to be calculated way more than a million times. 
-%%Moreover, due to limitations in building $U(\cdot)$ such as noise, training policies, etc. there are no guarantees that the global minimum $\hat{\omega}$ corresponds to the true labelling.
-%
-%%Nevertheless, there is a large body of literature proposing methodologies to find suboptimal solutions to the problem trading-off between time of convergence and accuracy of the solution reached.
-%%Szeliski et al.~\cite{szeliski2008comparative} conducted an exhaustive review in terms of solution quality and runtime of the most common energy minimization algorithms used in \ac{cv}, such as \ac{icm}, \ac{sa} or \ac{gc}.
-%
-%%The minimization strategy used for this work is \ac{gc}. 
-%%This technique was initially introduced to solve \ac{cv} applications by Boykov et al.~\cite{boykov2001fast}.
-%%Soon after its introduction, it becomes the minimization technique of choice for \ac{cv} problems.
-
-% Good % \subsection{Similitude with other optimization techniques}
-% Good % \todo{needs reworking}
-% Good % It is worth to mention here, that this pairwise term links this segmentation strategy to the family of segmentation methodologies based on optimization using \ac{acm}, such as levelsets.
-% Good % On its basic form, the family of \ac{acm} segmentation defines some forces to be applied to an initial contour and this contour evolves by minimizing its length while constrained by the forces properly designed for the task in hand.
+\paragraph{The minimization strategy} \label{sec:method:min}
+is determined by the nature of $U(\cdot)$ and $\mathcal{W}$, since not all the minimization strategies are applicable or adequate to find $\hat{\omega}$.
+The size of the labelling space $|\mathcal{W}|=|\mathcal{L}|^{|\mathcal{S}|}$, discontinuities in $U(\omega)$ due to $\mathcal{W}$ or the problem of local minima, 
+along with all the particular constrains of all the different minimization methodology.
+Need to be taken into account while choosing the most desirable minimization strategy.
 
 %%% Local Variables: 
 %%% mode: latex
