--- a/master.tex
+++ b/master.tex
@@ -15,13 +15,10 @@
 
 \begin{abstract}
 \acresetall  % reset the acronyms from the title (if any)
-Since breast cancer remains the leading cause of cancer death among female population world-wide, any attempt to create tools for assisting radiologists during the process of diagnosing is necessary.
-However, most of the technology developed in the imaging laboratories are expelled from this process by clinicians only because these technologies are not founded on the already existing clinical findings and procedures.
-
-We argue that in order to build \ac{cad} systems that take take advantage of the clinical findings already adopted by the clinicians,
-strategies to accurately delineate the breast structures and its lesions are the missing piece of puzzle.
-
-Therefore, a highly modular and flexible framework for segmenting breast tissues and lesions present in \ac{bus} images using optimization strategies and high-level descriptors designed analogously to the visual cues used by radiologists is here proposed.
+Due to the fact that breast cancer remains the leading cause of cancer death among female population world-wide, any attempts to create tools for assisting radiologists during the diagnosis process are necessary.
+However, most of the technologies developed in the imaging laboratories are expelled from this process because these technologies are not based on the existing findings and procedures undertaken by the clinicians.
+To address this issue, and to develop \ac{cad} systems that take advantage of this clinical findings already adopted by clinicians, these systems only lack strategies to accurately delineate the breast structures and its lesions.
+Therefore, this article proposes a highly modular and flexible framework for segmenting breast tissues and lesions present in \ac{bus} images using optimization strategies and high-level descriptors designed analogously to the visual cues used by radiologists.
 \end{abstract}
 
 \keywords{Breast Ultra-Sound, BI-RADS lexicon, Optimization based Segmentation, Machine-Learning based Segmentation, Graph-Cuts}
